# Proxima

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  package.json
contracts/: Cargo.toml
contracts/src/: lib.rs  policy.rs  registry.rs  types.rs
contracts/test_snapshots/: test_agent_count.1.json  test_agent_count_does_not_change_on_deactivate.1.json  test_agent_exists_returns_false_for_unknown_id.1.json  test_agent_exists_returns_true_after_register.1.json  test_create_policy_invalid_amount_panics.1.json  test_create_policy_success.1.json  test_create_policy_with_allowed_recipient.1.json  test_deactivate_agent.1.json  test_deactivate_nonexistent_agent_panics.1.json  test_execute_payment_accumulates_spent_today.1.json  test_execute_payment_exceeds_daily_limit_panics.1.json  test_execute_payment_exceeds_per_tx_limit_panics.1.json  test_execute_payment_on_revoked_policy_panics.1.json  test_execute_payment_success.1.json  test_execute_payment_wrong_recipient_panics.1.json  test_execute_payment_zero_amount_panics.1.json  test_get_agent_returns_correct_fields.1.json  test_get_nonexistent_agent_panics.1.json  test_get_nonexistent_policy_panics.1.json  test_is_authorized_returns_false_for_nonexistent_policy.1.json  test_is_authorized_returns_false_for_wrong_agent.1.json  test_is_authorized_returns_true_for_active_policy.1.json  test_multiple_policies_independent.1.json  test_policy_counter_increments.1.json  test_policy_stores_correct_asset_and_issuer.1.json  test_register_agent_success.1.json  test_register_duplicate_fails.1.json  (+14 more)
docs/: SDK_GUIDE.md  (+4 more)
(+40 files in other folders)
