[package]
name = "proxima-contracts"
version = "0.1.0"
edition = "2021"
authors = ["Proxima Contributors"]
license = "MIT"
description = "Proxima on-chain contracts: Agent Registry & Spending Policy"
repository = "https://github.com/your-org/proxima"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "21.0.0", features = [] }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
stellar-strkey = "0.0.8"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
